<resources>
    <string name="app_name">ABGEC</string>
    <string name="skip">Skip</string>
    <string name="image">image</string>
    <string name="we_will_send_one_time_password_on_this_mobile_number">We will send One Time Password on this Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch">Branch*</string>
    <string name="enter_your_branch">Enter Your Branch</string>
    <string name="passout_year">Passout Year*</string>
    <string name="chhattisgarh">Chhattisgarh</string>
    <string name="state">State*</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="city">City*</string>
    <string name="bilaspur">Bilaspur</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="personal_details">Personal Details</string>
    <string name="social_media_links">Social Media Links</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="https_www_facebook_com_username">https://www.facebook.com/username</string>
    <string name="https_www_twitter_com_username">https://www.twitter.com/username</string>
    <string name="twitter_account">Twitter Account</string>
    <string name="linkedin_account">Linkedin Account</string>
    <string name="https_www_linkedin_com_in_username">https://www.linkedin.com/in/username</string>
    <string name="instagram">Instagram</string>
    <string name="https_www_instagram_com_username">https://www.instagram.com/username</string>
    <string name="occupation">Occupation*</string>
    <string name="search_here">Search here</string>
    <string name="organization">Organization</string>
    <string name="year">Year</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="save">Save</string>
    <string name="your_details">Your Details</string>
    <string name="name">Name*</string>
    <string name="nameo">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="india">India</string>
    <string name="_2015_present">2015 - Present</string>
    <string name="manager">Manager</string>
    <string name="designation">Designation</string>
    <string name="infosys_wipro">Infosys, Wipro</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth*</string>
    <string name="about_me">About Me</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="_2014">2014</string>
    <string name="posted_jobs">Posted Jobs</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="country">Country*</string>
    <string name="brancho">Branch :</string>
    <string name="passout_yearo">Passout Year :</string>
    <string name="countryo">Country :</string>
    <string name="stateo">State :</string>
    <string name="cityo">City :</string>
    <string name="gendero">Gender :</string>
    <string name="bioo">Bio :</string>
    <string name="organizationo">Organization :</string>
    <string name="occupation_p">Occupation :</string>
    <string name="designationo">Designation :</string>
    <string name="company_name">Company Name*</string>
    <string name="infosys_wipro_cognizant">Infosys,Wipro,Cognizant..</string>
    <string name="job_title">Job Title*</string>
    <string name="software_developer_business_analyst">Software Developer,Business Analyst..</string>
    <string name="job_location">Job Location*</string>
    <string name="job_type">Job Type</string>
    <string name="salary_month">Salary/month</string>
    <string name="salary">Salary</string>
    <string name="job_function">Job Function</string>
    <string name="job_id">Job ID</string>
    <string name="bottom_bar">bottom_bar</string>
    <string name="location">Location : </string>
    <string name="looking_for_a_job">Looking for a job?</string>
    <string name="explore_alumnis_profile">Explore Alumnis Profile</string>
    <string name="are_your_sure_you_want_to_logout">Are your sure you want to logout?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="browse_your_gallery_or_take_a_picture_from_the_phone_camera_to_upload">Browse your Gallery or take a Picture from the phone Camera to upload</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="job_s_applying_link">Job\'s applying link or Email Address </string>
    <string name="job_s_link">Job\'s Link / Email Address*</string>
    <string name="apply">Apply</string>
    <string name="list_of_alumnis">List of Alumnis</string>
    <string name="edit">Edit</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="add_post">Add Post</string>
    <string name="add_job">Add Job</string>
    <string name="post_job">Post Job</string>
    <string name="welcome">Welcome</string>
    <string name="loading_images">Loading Images</string>
    <string name="about_meo">About Me :</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_text">Thank you for your interest in ABGEC social media app. As the app owner, we are committed to protecting the privacy of our users. This Privacy Policy outlines how we collect, use, and share information about our users.

        <b><u>\n\n1. Information we collect :</u> </b>
We collect information when you register for an account, create a profile, post content, and interact with other users on the app. The information we collect includes your name, email address, date of birth, gender, profile picture, location, and other information you provide.

        <b><u>\n\n2. How we use your information :</u> </b>
We use your information to provide and improve our services, communicate with you, and personalize your experience on the app. We may also use your information to conduct research and analytics, and to comply with legal requirements.

        <b><u>\n\n3. Sharing of your information :</u> </b>
We do not sell or rent your personal information to third parties. We may share your information with service providers who assist us in providing our services, or with third parties who perform advertising or marketing services on our behalf. We may also share your information when required by law or to protect our rights or the rights of others.

        <b><u>\n\n4. Security of your information :</u> </b>
We take reasonable measures to protect the security of your information, including using encryption and secure storage methods. However, no method of transmission over the internet or electronic storage is 100% secure, and we cannot guarantee the security of your information.

        <b><u>\n\n5. Your choices :</u> </b>
You can control the information you provide to us and how we use it. You can update your profile information, adjust your privacy settings, and choose whether to receive promotional communications from us. You can also delete your account and request that we delete your information.

        <b><u>\n\n6. Children\'s privacy :</u> </b>
Our app is not intended for children under the age of 13, and we do not knowingly collect personal information from children under the age of 13. If you believe we have collected information from a child under the age of 13, please contact us immediately.

        <b><u>\n\n7. Changes to this Privacy Policy :</u></b>
We may update this Privacy Policy from time to time. If we make material changes, we will notify you by email or by posting a notice on the app.

        \n\nIf you have any questions or concerns about this Privacy Policy, please contact us at <b>nikhilverma.nv345@gmail.com</b></string>
    <string name="memories_we_made">Memories We Made</string>
</resources>