<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:scrollbars="none"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditList">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_back_view"
                    android:contentDescription="@string/image"
                    android:padding="10dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView101"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/your_details"
                    android:textColor="@color/main_blue"
                    android:textSize="25sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/enter_your_name"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck">

            </EditText>

            <TextView
                android:id="@+id/pr_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/branch"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/country_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/enter_your_branch"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/crime_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/passout_year"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passout_yr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/_2014"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/nxh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="6264714862"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
            android:id="@+id/cw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/lexend"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/xyz_gmail_com"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/cwscdc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/organizationo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/organisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="Infosys, Coal India..."
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/vfcw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/designation"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/manager"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/year_crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/india"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/case_type_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/chhattisgarh"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck">

            </EditText>

            <TextView
                android:id="@+id/case_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/lexend"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/bilaspur"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_card"
                android:backgroundTint="@color/main_yellow"
                android:fontFamily="@font/lexend"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
